added a function to properly format CAS numbers and check their validity

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,15 @@
 
 export(calc_RI)
 export(chem_scale)
+export(format_CAS)
 export(get_VIP)
 export(parse_IA)
 export(read_IA)
 import(dplyr)
+import(purrr)
 import(readr)
 import(ropls)
 import(stringr)
 import(tibble)
 importFrom(stats,sd)
+importFrom(webchem,is.cas)
