--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(calc_RI)
 export(chem_scale)
 export(format_CAS)
 export(get_VIP)
+export(get_plotdata)
 export(parse_IA)
 export(read_IA)
 import(dplyr)
