working on RI scraping function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,9 @@ import(dplyr)
 import(purrr)
 import(readr)
 import(ropls)
+import(rvest)
 import(stringr)
 import(tibble)
 importFrom(stats,sd)
 importFrom(webchem,is.cas)
+importFrom(xml2,read_html)
