finished working version of get_RI.  Need to implement better error checking though.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(calc_RI)
 export(chem_scale)
 export(format_CAS)
+export(get_RI)
 export(get_VIP)
 export(get_plotdata)
 export(read_IA)
@@ -10,9 +11,12 @@ import(dplyr)
 import(purrr)
 import(readr)
 import(ropls)
-import(rvest)
 import(stringr)
 import(tibble)
+importFrom(purrr,map)
+importFrom(rvest,html_nodes)
+importFrom(rvest,html_table)
 importFrom(stats,sd)
 importFrom(webchem,is.cas)
 importFrom(xml2,read_html)
+importFrom(xml2,xml_length)
