--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,8 @@ export(calc_RI)
 export(calc_RT)
 export(chem_scale)
 export(format_CAS)
-export(get_RI)
 export(get_VIP)
+export(get_loadings)
 export(get_plotdata)
 export(read_IA)
 import(dplyr)
@@ -14,11 +14,5 @@ import(readr)
 import(ropls)
 import(stringr)
 import(tibble)
-importFrom(purrr,map)
-importFrom(rvest,html_nodes)
-importFrom(rvest,html_table)
 importFrom(stats,sd)
-importFrom(stats,setNames)
 importFrom(webchem,is.cas)
-importFrom(xml2,read_html)
-importFrom(xml2,xml_length)
