--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,11 +8,13 @@ export(get_VIP)
 export(get_loadings)
 export(get_plotdata)
 export(read_IA)
+export(sim_multvar)
 import(dplyr)
 import(purrr)
 import(readr)
 import(ropls)
 import(stringr)
 import(tibble)
+importFrom(MASS,mvrnorm)
 importFrom(stats,sd)
 importFrom(webchem,is.cas)
