added some plotting helpers for ropls

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,9 +7,13 @@ export(format_CAS)
 export(get_VIP)
 export(get_loadings)
 export(get_plotdata)
+export(plot_pca)
+export(plot_plsda)
 export(read_IA)
 export(sim_multvar)
 import(dplyr)
+import(ggplot2)
+import(latex2exp)
 import(purrr)
 import(readr)
 import(ropls)
