new 'tidy' way of simulating multivariate data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,9 @@ export(get_plotdata)
 export(plot_pca)
 export(plot_plsda)
 export(read_IA)
+export(sim_covar)
+export(sim_df)
+export(sim_discr)
 export(sim_multvar)
 import(dplyr)
 import(ggplot2)
