added sim_missing which adds NAs to a dataframe

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(read_IA)
 export(sim_covar)
 export(sim_df)
 export(sim_discr)
+export(sim_missing)
 export(sim_multvar)
 import(dplyr)
 import(ggplot2)
@@ -23,5 +24,6 @@ import(ropls)
 import(stringr)
 import(tibble)
 importFrom(MASS,mvrnorm)
+importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(webchem,is.cas)
