--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(format_CAS)
 export(get_VIP)
 export(get_loadings)
 export(get_plotdata)
+export(hullfn)
 export(plot_pca)
 export(plot_plsda)
 export(read_IA)
