--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(get_loadings)
 export(get_plotdata)
 export(hullfn)
 export(plot_pca)
+export(plot_pls)
 export(plot_plsda)
 export(read_IA)
 export(sim_covar)
