--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(format_CAS)
 export(get_VIP)
 export(get_loadings)
 export(get_plotdata)
+export(plot_opls)
 export(plot_pca)
 export(plot_pls)
 export(plot_plsda)
