re-factored get_plotdata by writing get_scores and get_modelinfo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,9 @@ export(calc_RT)
 export(chem_scale)
 export(get_VIP)
 export(get_loadings)
+export(get_modelinfo)
 export(get_plotdata)
+export(get_scores)
 export(plot_opls)
 export(plot_pca)
 export(plot_pls)
