--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,9 @@
 
 language: R
 cache: packages
+r_packages:
+  - covr
+bioc_packages:
+  - ropls
+after_success:
+  - Rscript -e 'library(covr); codecov()'
