update namespace and documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,23 +9,16 @@ export(get_modelinfo)
 export(get_plotdata)
 export(get_scores)
 export(plot_opls)
+export(plot_oplsda)
 export(plot_pca)
 export(plot_pls)
 export(plot_plsda)
 export(read_IA)
-export(sim_covar)
-export(sim_df)
-export(sim_discr)
-export(sim_missing)
-export(sim_multvar)
 import(dplyr)
 import(ggplot2)
 import(latex2exp)
-import(purrr)
 import(readr)
 import(ropls)
 import(stringr)
 import(tibble)
-importFrom(MASS,mvrnorm)
-importFrom(stats,runif)
 importFrom(stats,sd)
